<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_connect_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wifi.main.MainActivity">


    <LinearLayout
        android:id="@+id/connect_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            style="@style/button_wrapper_style"
            android:id="@+id/IP_Relative"
            android:paddingTop="18dp"
            android:paddingBottom="18dp">

            <TextView
                android:id="@+id/IPText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:textColor="@color/qmui_config_color_gray_5"
                android:textCursorDrawable="@null"
                android:gravity="center_horizontal"
                android:hint="@string/station_ip"/>

        </RelativeLayout>

        <RelativeLayout
            style="@style/button_wrapper_style"
            android:id="@+id/Port_Relative"
            android:paddingTop="18dp"
            android:paddingBottom="18dp">

            <TextView
                android:id="@+id/PortText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/qmui_config_color_gray_5"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:textCursorDrawable="@null"
                android:hint="@string/station_port"
                android:gravity="center_horizontal"/>

        </RelativeLayout>

        <RelativeLayout
            style="@style/button_wrapper_style"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

                <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                    android:id="@+id/commit_input"
                    android:layout_width="120dp"
                    android:layout_height="46dp"
                    android:layout_centerInParent="true"
                    android:textSize="18dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/commit_input"
                    app:qmui_radius="4dp"/>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>
